# besogne

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  MOCK.txt  build.rs  context.example.json  flake.nix  manifest.aws-ecr-login.json  manifest.json  manifest.minimalist.json  manifest.nixapp.json  manifest.npm-install-nix.json  manifest.npm-install.json  processed_manifest.example.json
components/aws/: session.json
components/coreutils/: shell.json
components/dns/: resolve.json
components/docker/: daemon.json  docker.json  healthcheck.json  registry.json
components/env/: direnv.json  dotenv.json  nix.json
components/git/: branch.json  no-fixup.json
components/go/: deps.json
components/http/: check.json
components/k8s/: deployment-ready.json  dns-resolve.json  job-complete.json  pod-ready.json  service-available.json
components/mise/: config-dot-local.json  config-dot.json  config-local.json  config-tool-versions.json  config.json  develop.json  mise.json
components/nix/: app.json  build.json  check.json  derivation.json  develop.json  devour-flake.json  flake-file.json  flake.json  fmt.json  gc.json  nh.json  nix.json  nom.json  package.json  switch-home.json  switch-nixos.json  switch-system.json  system-manager.json  treefmt.json  update.json
components/node/: toolchain.json
components/npm/: deps.json
components/postgres/: ready.json  service.json
components/python/: toolchain.json
docs/: book.toml
nix/: default.nix
src/: error.rs  event.rs  facade.rs  lib.rs  main.rs
src/ir/: dag.rs  (+2 more)
tests/: cache_and_skip.rs  e2e.rs  integration.rs
(+263 files in other folders)
